// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package cobalt;

option java_multiple_files = true;
option java_package = "com.google.cobalt";

// Aggregated data for specific local aggregation procedures.
message AggregateValue {
  oneof aggregate_value {
    // Used by COUNT.
    int64 integer_value = 1;
    // Used by STRING_COUNTS.
    LocalIndexHistogram index_histogram = 2;
  }
}

// Histogram with buckets that indexes into a list of string hashes or integer
// buckets from the registry.
message LocalIndexHistogram {
  message Bucket {
    // Index into the list the histogram refers to.
    int32 index = 1;

    // The occurrence count of the list item.
    int64 count = 2;
  }
  repeated Bucket buckets = 1;
}
